--- a/src/components/Offers/Offers.css
+++ b/src/components/Offers/Offers.css
@@ -5,6 +5,7 @@
   margin:auto;
   padding: 0px 140px;
   margin-bottom: 150px;
+  margin-top: 150px;
   background: linear-gradient(180deg, #fde1ff 0%, #e1ffea22 60%);
 }
 
